# pointcloud-web-viewer

./: .gitignore  README.md
client/: README.md  package.json
client/public/: index.html  manifest.json
client/src/: App.tsx  index.tsx
client/src/components/: NavBar.tsx  PointCloudMesh.tsx  PointCloudReceiver.tsx  PointCloudViewer.tsx
client/src/store/: connectState.ts  pointsState.ts  urlState.ts
server/echo/: CMakeLists.txt  server.cpp
server/streamer/: CMakeLists.txt  streamer.cpp
server/utils/: streamer.hpp
